# bitfield

./: .gitignore  .travis.yml  MANIFEST  MANIFEST.in  README.md  mv.py  pyproject.toml  sdist_local.sh  setup.py
.github/workflows/: build.yml
cimpl/: field.c  field.h  field.pyx  popcount.h
page_size_test/: enum.sh  field_template.pyx  test.py  test.sh
test/: test_bitfield.py
